Merge pull request #3
* sonar integration

* sonar integeration

* sonar integration

* sonar integration

* sonar integration

* sonar integration

* sonar cloud

* added some test cases

* Update GreenCommuteApplication.java

* Merge branch 'sonar_integration' of https://github.com/ganeshdende/gr…

* added some test cases

* added some test cases

* added some test cases

* added some test cases

* added testcases